semcore/wizard/src/style/wizard.shadow.css
SWizard {
  max-width: 980px;
  max-height: 700px;
  display: flex;
  padding: 0;
  background: transparent;
}

SSidebar {
  background: var(--intergalactic-control-primary-advertising, #5925ab);
  color: var(--intergalactic-text-primary-invert, #ffffff);
  font-weight: var(--intergalactic-bold, 700);
  font-size: var(--intergalactic-fs-300, 16px);
  line-height: var(--intergalactic-lh-300, 150%);
  padding: var(--intergalactic-spacing-10x, 40px) var(--intergalactic-spacing-2x, 8px)
    calc(var(--intergalactic-spacing-8x, 32px) + var(--intergalactic-spacing-05x, 2px));
  max-width: 220px;
  flex-shrink: 0;
  box-sizing: border-box;
  border-radius: var(--intergalactic-modal-rounded, 12px) 0 0
    var(--intergalactic-modal-rounded, 12px);
  @media (max-width: 1060px) {
    width: 44px;
  }
}

SSidebarHeader {
  margin: 0 var(--intergalactic-spacing-5x, 20px) var(--intergalactic-spacing-4x, 16px);
  @media (max-width: 1060px) {
    display: none;
  }
}

SStepper {
  display: flex;
  font-size: var(--intergalactic-fs-200, 14px);
  border-radius: var(--intergalactic-control-rounded, 6px);
  padding: var(--intergalactic-spacing-2x, 8px) var(--intergalactic-spacing-3x, 12px);
  cursor: pointer;
  position: relative;
  overflow: auto;
  line-height: var(--intergalactic-lh-200, 142%);

  &:hover {
    background: var(--intergalactic-control-primary-advertising-hover, #421983);
    z-index: 1;
  }
  &[active] {
    background: var(--intergalactic-control-primary-advertising-active, #8649e1);
  }
  &:disabled,
  &[disabled] {
    opacity: var(--intergalactic-disabled-opacity, 0.3);
    cursor: default;
    pointer-events: none; /* Disable interactions */
  }

  @media (max-width: 1060px) {
    padding: var(--intergalactic-spacing-2x, 8px) var(--intergalactic-spacing-1x, 4px);
    &:hover {
      width: fit-content;
      max-width: 220px;
    }
    &:hover SStepDescription {
      display: block;
      border-radius: var(--intergalactic-control-rounded, 6px);
      white-space: nowrap;
      overflow: auto;
    }
    &[active]:hover SStepDescription {
      background: var(--intergalactic-control-primary-advertising-active, #8649e1);
    }
  }
}

SStepNumber {
  display: inline-block;
  min-width: 24px;
}

SCompleted {
  /* disable-tokens-validator */
  margin-top: 1px;
}

SStepDescription {
  @media (max-width: 1060px) {
    display: none;
  }
}

SContent {
  padding: var(--intergalactic-spacing-10x, 40px);
  width: 100%;
  border-radius: 0 var(--intergalactic-modal-rounded, 12px) var(--intergalactic-modal-rounded, 12px)
    0;
  background: var(--intergalactic-bg-primary-neutral, #ffffff);
}

